# openroast

./: .gitignore  CLAUDE.md  README.md  codecov.yml
backend/: pyproject.toml
backend/data/machines/: 8ddc8073-9acf-4e25-baba-145f4e005257.json  c77f49cc-eea0-4c5d-96b7-a057c58fefbd.json
backend/src/openroast/: __init__.py  main.py
backend/src/openroast/api/: routes.py  simulator_routes.py
backend/src/openroast/catalog/: loader.py  machines.json
backend/src/openroast/core/: __init__.py  detection.py  machine_storage.py  manager.py  paths.py  schedule_storage.py  session.py  storage.py
backend/src/openroast/desktop/: __main__.py  menubar.py  tray_windows.py
backend/src/openroast/drivers/: __init__.py  base.py  factory.py  modbus.py
backend/src/openroast/models/: catalog.py  machine.py  profile.py  schedule.py  ws_messages.py
backend/src/openroast/simulator/: __init__.py  __main__.py  engine.py  manager.py  readme.md  register_map.py  server.py
backend/src/openroast/ws/: live.py
backend/tests/: conftest.py
backend/tests/unit/api/: test_routes.py  test_simulator_routes.py
backend/tests/unit/catalog/: test_loader.py
backend/tests/unit/core/: test_detection.py  test_machine_storage.py  test_manager.py  test_paths.py  test_schedule_storage.py  test_session.py  test_storage.py
backend/tests/unit/drivers/: test_base.py  test_factory.py  test_modbus.py
backend/tests/unit/models/: test_catalog.py  test_machine.py  test_profile.py  test_ws_messages.py
backend/tests/unit/simulator/: test_engine.py  test_manager.py  test_register_map.py  test_server.py
docs/: protocol.md
(+99 files in other folders)
