[project]
name = "openroast"
version = "1.2.0"
description = "Browser-based coffee roasting software — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
]
hardware = [
    "pyserial>=3.5",
    "pymodbus>=3.7",
]
desktop = [
    "pyinstaller>=6.0",
    "rumps>=0.4.0; sys_platform=='darwin'",
    "pystray>=0.19; sys_platform=='win32'",
    "pillow>=10.0; sys_platform=='win32'",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["openroast"]

[tool.coverage.run]
source = ["openroast"]
omit = [
    "*/tests/*",
    "*/desktop/*",
]
relative_files = true

[tool.coverage.report]
fail_under = 90
show_missing = true
